2008-07-22  Jeffrey Stedfast  <fejj@novell.com>

	* Mono.TextEditor/DefaultEditActions.cs (DeleteCaretLineToEnd):
	Mimic Emacs behavior when the cursor is in the last column of the
	line.

2008-07-18  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: Fixed visual --> document location
	  bug in lines with open foldings.

2008-07-15  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed "Bug 408896
	  - Text editor: cannot insert apostrophe, parentheses, etc in text
	  files".

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/BufferedTextReader.cs:
	  Added System.IO.TextReader support for the text buffer.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 385456 - Code folding'.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* JavascriptSyntaxMode.xml, XmlSyntaxMode.xml: Added java script syntax
	  mode (Bug 400896 - Syntax Mode for Javascript).

2008-07-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/ITooltipProvider.cs, Mono.TextEditor/TextEditor.cs:
	  Allow specifying the alignment of tooltips.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/ITooltipProvider.cs, Mono.TextEditor/TextEditor.cs:
	  Add support for "interactive" tooltips (tooltips which can have
	  interactive widgets).

2008-07-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/IXmlProvider.cs: Worked on style
	  support.

2008-07-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/IXmlProvider.cs: Added support for
	  custom styles.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* CSharpSyntaxMode.xml, XmlSyntaxMode.xml: fixed "Bug 405927 - Quotes
	  are mis-highlighted in C# XML comments".

2008-07-04  Mike Krüger <mkrueger@novell.com> 
