@@ -1,4 +1,4 @@
-<objects>
+<objects attr-sync="on">
   <object type="Mono.TextEditor.TextEditor" palette-category="Mono.TextEditor" allow-children="false" base-type="Gtk.DrawingArea">
     <itemgroups>
       <itemgroup label="TextEditor Properties">
@@ -8,7 +8,6 @@
         <property name="HighlightSearchPattern" />
         <property name="IsCaseSensitive" />
         <property name="IsWholeWordOnly" />
-        <property name="ReadOnly" />
       </itemgroup>
     </itemgroups>
     <signals>
